编译原理实验及报告/lab1/parser.output
Terminals unused in grammar

   STRUCT_VISIT
   STRUCT_NEW
   STRUCT_DEC
   EXT_STRUCT_DEC
   CASE_STMT
   CASE_STMT_LIST
   DEFAULT_STMT
   FOR_DEC
   FOR_EXP1
   FOR_EXP2
   FOR_EXP3
   DPLUS
   ASSIGNOP_MOD
   ASSIGNOP_MINUS
   ASSIGNOP_PLUS
   ASSIGNOP_DIV
   ASSIGNOP_STAR
   AUTOPLUS
   AUTOMINUS
   EXT_DEF_LIST
   EXT_VAR_DEF
   FUNC_DEF
   FUNC_DEC
   EXT_DEC_LIST
   PARAM_LIST
   PARAM_DEC
   VAR_DEF
   DEC_LIST
   DEF_LIST
   COMP_STM
   STM_LIST
   EXP_STMT
   IF_THEN
   IF_THEN_ELSE
   FUNC_CALL
   ARGS
   FUNCTION
   PARAM
   ARG
   ARRAY_LIST
   UMINUS
   DMINUS


Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | Struct_dec SEMI
    7       | error SEMI

    8 Specifier: TYPE

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 VarDec: ID
   12       | ID Arraylist

   13 Arraylist: LB INT RB
   14          | LB INT RB Arraylist

   15 FuncDec: ID LP VarList RP
   16        | ID LP RP

   17 VarList: ParamDec
   18        | ParamDec COMMA VarList

   19 ParamDec: Specifier VarDec

   20 CompSt: LC DefList StmList RC

   21 StmList: %empty
   22        | Stmt StmList

   23 Stmt: Exp SEMI
   24     | CompSt
   25     | RETURN Exp SEMI
   26     | IF LP Exp RP Stmt
   27     | IF LP Exp RP Stmt ELSE Stmt
   28     | WHILE LP Exp RP Stmt
   29     | CONTINUE SEMI
   30     | BREAK SEMI
   31     | FOR LP ForDec RP Stmt
   32     | SWITCH LP Exp RP LC CaseStmtList RC

   33 DefaultStmt: DEFAULT COLON StmList

   34 CaseStmt: CASE INT COLON StmList
   35         | CASE CHAR COLON StmList

   36 CaseStmtList: %empty
   37             | CaseStmt CaseStmtList
   38             | DefaultStmt

   39 ForDec: Exp SEMI Exp SEMI Exp
   40       | Exp SEMI SEMI Exp
   41       | Exp SEMI Exp SEMI
   42       | Exp SEMI SEMI
   43       | SEMI Exp SEMI Exp
   44       | SEMI Exp SEMI
   45       | SEMI SEMI Exp
   46       | SEMI SEMI

   47 Struct_dec: STRUCT StructName LC DefList RC
   48           | STRUCT ID ID

   49 StructName: %empty
   50           | ID

   51 DefList: %empty
   52        | Def DefList
   53        | error SEMI

   54 Def: Specifier DecList SEMI
   55    | Struct_dec SEMI

   56 DecList: Dec
   57        | Dec COMMA DecList

   58 Dec: VarDec
   59    | VarDec ASSIGNOP Exp

   60 Args: Exp COMMA Args
   61     | Exp

   62 Exp: Exp ASSIGNOP Exp
   63    | Exp PLUS ASSIGNOP Exp
   64    | Exp MINUS ASSIGNOP Exp
   65    | Exp STAR ASSIGNOP Exp
   66    | Exp DIV ASSIGNOP Exp
   67    | Exp MOD ASSIGNOP Exp
   68    | Exp AND Exp
   69    | Exp OR Exp
   70    | Exp RELOP Exp
   71    | Exp PLUS Exp
   72    | Exp MINUS Exp
   73    | Exp STAR Exp
   74    | Exp DIV Exp
   75    | Exp MOD Exp
   76    | Exp PLUS PLUS
   77    | Exp MINUS MINUS
   78    | LP Exp RP
   79    | MINUS Exp
   80    | NOT Exp
   81    | ID LP Args RP
   82    | ID LP RP
   83    | ID
   84    | INT
   85    | CHAR
   86    | STRING
   87    | FLOAT
   88    | LB Args RB
   89    | ID Arraylist
   90    | Exp DOT ID


Terminals, with rules where they appear

$end (0) 0
error (256) 7 53
CHAR (258) 35 85
INT (259) 13 14 34 84
ID (260) 11 12 15 16 48 50 81 82 83 89 90
STRING (261) 86
RELOP (262) 70
TYPE (263) 8
FLOAT (264) 87
STRUCT (265) 47 48
RETURN (266) 25
FOR (267) 31
SWITCH (268) 32
CASE (269) 34 35
COLON (270) 33 34 35
DEFAULT (271) 33
STRUCT_VISIT (272)
STRUCT_NEW (273)
STRUCT_DEC (274)
EXT_STRUCT_DEC (275)
CASE_STMT (276)
CASE_STMT_LIST (277)
DEFAULT_STMT (278)
FOR_DEC (279)
FOR_EXP1 (280)
FOR_EXP2 (281)
FOR_EXP3 (282)
DPLUS (283)
LP (284) 15 16 26 27 28 31 32 78 81 82
RP (285) 15 16 26 27 28 31 32 78 81 82
LC (286) 20 32 47
RC (287) 20 32 47
LB (288) 13 14 88
RB (289) 13 14 88
SEMI (290) 4 6 7 23 25 29 30 39 40 41 42 43 44 45 46 53 54 55
COMMA (291) 10 18 57 60
DOT (292) 90
PLUS (293) 63 71 76
MINUS (294) 64 72 77 79
STAR (295) 65 73
DIV (296) 66 74
MOD (297) 67 75
ASSIGNOP_MOD (298)
ASSIGNOP (299) 59 62 63 64 65 66 67
ASSIGNOP_MINUS (300)
ASSIGNOP_PLUS (301)
ASSIGNOP_DIV (302)
ASSIGNOP_STAR (303)
AND (304) 68
OR (305) 69
NOT (306) 80
AUTOPLUS (307)
AUTOMINUS (308)
IF (309) 26 27
ELSE (310) 27
WHILE (311) 28
BREAK (312) 30
CONTINUE (313) 29
EXT_DEF_LIST (314)
EXT_VAR_DEF (315)
FUNC_DEF (316)
FUNC_DEC (317)
EXT_DEC_LIST (318)
PARAM_LIST (319)
PARAM_DEC (320)
VAR_DEF (321)
DEC_LIST (322)
DEF_LIST (323)
COMP_STM (324)
STM_LIST (325)
EXP_STMT (326)
IF_THEN (327)
IF_THEN_ELSE (328)
FUNC_CALL (329)
ARGS (330)
FUNCTION (331)
PARAM (332)
ARG (333)
ARRAY_LIST (334)
UMINUS (335)
DMINUS (336)
LOWER_THEN_ELSE (337)


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
program (84)
    on left: 1, on right: 0
ExtDefList (85)
    on left: 2 3, on right: 1 3
ExtDef (86)
    on left: 4 5 6 7, on right: 3
Specifier (87)
    on left: 8, on right: 4 5 19 54
ExtDecList (88)
    on left: 9 10, on right: 4 10
VarDec (89)
    on left: 11 12, on right: 9 10 19 58 59
Arraylist (90)
    on left: 13 14, on right: 12 14 89
FuncDec (91)
    on left: 15 16, on right: 5
VarList (92)
    on left: 17 18, on right: 15 18
ParamDec (93)
    on left: 19, on right: 17 18
CompSt (94)
    on left: 20, on right: 5 24
StmList (95)
    on left: 21 22, on right: 20 22 33 34 35
Stmt (96)
    on left: 23 24 25 26 27 28 29 30 31 32, on right: 22 26 27 28 31
DefaultStmt (97)
    on left: 33, on right: 38
CaseStmt (98)
    on left: 34 35, on right: 37
CaseStmtList (99)
    on left: 36 37 38, on right: 32 37
ForDec (100)
    on left: 39 40 41 42 43 44 45 46, on right: 31
Struct_dec (101)
    on left: 47 48, on right: 6 55
StructName (102)
    on left: 49 50, on right: 47
DefList (103)
    on left: 51 52 53, on right: 20 47 52
Def (104)
    on left: 54 55, on right: 52
DecList (105)
    on left: 56 57, on right: 54 57
Dec (106)
    on left: 58 59, on right: 56 57
Args (107)
    on left: 60 61, on right: 60 81 88
Exp (108)
    on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
    80 81 82 83 84 85 86 87 88 89 90, on right: 23 25 26 27 28 32 39
    40 41 42 43 44 45 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
    74 75 76 77 78 79 80 90


State 0

    0 $accept: . program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 4
    ExtDefList  go to state 5
    ExtDef      go to state 6
    Specifier   go to state 7
    Struct_dec  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

    8 Specifier: TYPE .

    $default  reduce using rule 8 (Specifier)


State 3

   47 Struct_dec: STRUCT . StructName LC DefList RC
   48           | STRUCT . ID ID

    ID  shift, and go to state 10

    $default  reduce using rule 49 (StructName)

    StructName  go to state 11


State 4

    0 $accept: program . $end

    $end  shift, and go to state 12


State 5

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 13
    ExtDef      go to state 6
    Specifier   go to state 7
    Struct_dec  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FuncDec     go to state 17


State 8

    6 ExtDef: Struct_dec . SEMI

    SEMI  shift, and go to state 18


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   48 Struct_dec: STRUCT ID . ID
   50 StructName: ID .

    ID  shift, and go to state 19

    $default  reduce using rule 50 (StructName)


State 11

   47 Struct_dec: STRUCT StructName . LC DefList RC

    LC  shift, and go to state 20


State 12

    0 $accept: program $end .

    $default  accept


State 13

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 14

   11 VarDec: ID .
   12       | ID . Arraylist
   15 FuncDec: ID . LP VarList RP
   16        | ID . LP RP

    LP  shift, and go to state 21
    LB  shift, and go to state 22

    $default  reduce using rule 11 (VarDec)

    Arraylist  go to state 23


State 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 16

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList

    COMMA  shift, and go to state 25

    $default  reduce using rule 9 (ExtDecList)


State 17

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 26

    CompSt  go to state 27


State 18

    6 ExtDef: Struct_dec SEMI .

    $default  reduce using rule 6 (ExtDef)


State 19

   48 Struct_dec: STRUCT ID ID .

    $default  reduce using rule 48 (Struct_dec)


State 20

   47 Struct_dec: STRUCT StructName LC . DefList RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 51 (DefList)

    Specifier   go to state 29
    Struct_dec  go to state 30
    DefList     go to state 31
    Def         go to state 32


State 21

   15 FuncDec: ID LP . VarList RP
   16        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 33

    Specifier  go to state 34
    VarList    go to state 35
    ParamDec   go to state 36


State 22

   13 Arraylist: LB . INT RB
   14          | LB . INT RB Arraylist

    INT  shift, and go to state 37


State 23

   12 VarDec: ID Arraylist .

    $default  reduce using rule 12 (VarDec)


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 16


State 26

   20 CompSt: LC . DefList StmList RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    CHAR      reduce using rule 51 (DefList)
    INT       reduce using rule 51 (DefList)
    ID        reduce using rule 51 (DefList)
    STRING    reduce using rule 51 (DefList)
    FLOAT     reduce using rule 51 (DefList)
    RETURN    reduce using rule 51 (DefList)
    FOR       reduce using rule 51 (DefList)
    SWITCH    reduce using rule 51 (DefList)
    LP        reduce using rule 51 (DefList)
    LC        reduce using rule 51 (DefList)
    RC        reduce using rule 51 (DefList)
    LB        reduce using rule 51 (DefList)
    MINUS     reduce using rule 51 (DefList)
    NOT       reduce using rule 51 (DefList)
    IF        reduce using rule 51 (DefList)
    WHILE     reduce using rule 51 (DefList)
    BREAK     reduce using rule 51 (DefList)
    CONTINUE  reduce using rule 51 (DefList)

    Specifier   go to state 29
    Struct_dec  go to state 30
    DefList     go to state 40
    Def         go to state 32


State 27

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


State 28

   53 DefList: error . SEMI

    SEMI  shift, and go to state 41


State 29

   54 Def: Specifier . DecList SEMI

    ID  shift, and go to state 38

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 30

   55 Def: Struct_dec . SEMI

    SEMI  shift, and go to state 45


State 31

   47 Struct_dec: STRUCT StructName LC DefList . RC

    RC  shift, and go to state 46


State 32

   52 DefList: Def . DefList

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    CHAR      reduce using rule 51 (DefList)
    INT       reduce using rule 51 (DefList)
    ID        reduce using rule 51 (DefList)
    STRING    reduce using rule 51 (DefList)
    FLOAT     reduce using rule 51 (DefList)
    RETURN    reduce using rule 51 (DefList)
    FOR       reduce using rule 51 (DefList)
    SWITCH    reduce using rule 51 (DefList)
    LP        reduce using rule 51 (DefList)
    LC        reduce using rule 51 (DefList)
    RC        reduce using rule 51 (DefList)
    LB        reduce using rule 51 (DefList)
    MINUS     reduce using rule 51 (DefList)
    NOT       reduce using rule 51 (DefList)
    IF        reduce using rule 51 (DefList)
    WHILE     reduce using rule 51 (DefList)
    BREAK     reduce using rule 51 (DefList)
    CONTINUE  reduce using rule 51 (DefList)

    Specifier   go to state 29
    Struct_dec  go to state 30
    DefList     go to state 47
    Def         go to state 32


State 33

   16 FuncDec: ID LP RP .

    $default  reduce using rule 16 (FuncDec)


State 34

   19 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  go to state 48


State 35

   15 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 49


State 36

   17 VarList: ParamDec .
   18        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 50

    $default  reduce using rule 17 (VarList)


State 37

   13 Arraylist: LB INT . RB
   14          | LB INT . RB Arraylist

    RB  shift, and go to state 51


State 38

   11 VarDec: ID .
   12       | ID . Arraylist

    LB  shift, and go to state 22

    $default  reduce using rule 11 (VarDec)

    Arraylist  go to state 23


State 39

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 40

   20 CompSt: LC DefList . StmList RC

    CHAR      shift, and go to state 52
    INT       shift, and go to state 53
    ID        shift, and go to state 54
    STRING    shift, and go to state 55
    FLOAT     shift, and go to state 56
    RETURN    shift, and go to state 57
    FOR       shift, and go to state 58
    SWITCH    shift, and go to state 59
    LP        shift, and go to state 60
    LC        shift, and go to state 26
    LB        shift, and go to state 61
    MINUS     shift, and go to state 62
    NOT       shift, and go to state 63
    IF        shift, and go to state 64
    WHILE     shift, and go to state 65
    BREAK     shift, and go to state 66
    CONTINUE  shift, and go to state 67

    $default  reduce using rule 21 (StmList)

    CompSt   go to state 68
    StmList  go to state 69
    Stmt     go to state 70
    Exp      go to state 71


State 41

   53 DefList: error SEMI .

    $default  reduce using rule 53 (DefList)


State 42

   58 Dec: VarDec .
   59    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 72

    $default  reduce using rule 58 (Dec)


State 43

   54 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 73


State 44

   56 DecList: Dec .
   57        | Dec . COMMA DecList

    COMMA  shift, and go to state 74

    $default  reduce using rule 56 (DecList)


State 45

   55 Def: Struct_dec SEMI .

    $default  reduce using rule 55 (Def)


State 46

   47 Struct_dec: STRUCT StructName LC DefList RC .

    $default  reduce using rule 47 (Struct_dec)


State 47

   52 DefList: Def DefList .

    $default  reduce using rule 52 (DefList)


State 48

   19 ParamDec: Specifier VarDec .

    $default  reduce using rule 19 (ParamDec)


State 49

   15 FuncDec: ID LP VarList RP .

    $default  reduce using rule 15 (FuncDec)


State 50

   18 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 34
    VarList    go to state 75
    ParamDec   go to state 36


State 51

   13 Arraylist: LB INT RB .
   14          | LB INT RB . Arraylist

    LB  shift, and go to state 22

    $default  reduce using rule 13 (Arraylist)

    Arraylist  go to state 76


State 52

   85 Exp: CHAR .

    $default  reduce using rule 85 (Exp)


State 53

   84 Exp: INT .

    $default  reduce using rule 84 (Exp)


State 54

   81 Exp: ID . LP Args RP
   82    | ID . LP RP
   83    | ID .
   89    | ID . Arraylist

    LP  shift, and go to state 77
    LB  shift, and go to state 22

    $default  reduce using rule 83 (Exp)

    Arraylist  go to state 78


State 55

   86 Exp: STRING .

    $default  reduce using rule 86 (Exp)


State 56

   87 Exp: FLOAT .

    $default  reduce using rule 87 (Exp)


State 57

   25 Stmt: RETURN . Exp SEMI
